[package]
name = "pop-desktop-widget"
version = "0.1.1"
authors = ["Michael Aaron Murphy <mmstick@pm.me>"]
description = "GTK desktop settings widget for Pop!_OS"
edition = "2018"
license = "GPLv3"
readme = "README.md"

[workspace]
members = [ "ffi", "tools" ]

[dependencies]
cascade = "1.0.0"
gtk-extras = { git = "https://github.com/pop-os/gtk-extras" }
glib = "0.10.3"
gtk = "0.9.2"
gio = "0.9.1"
libhandy = "0.7.1"
