[package]
name = "pop-desktop-widget"
version = "0.1.1"
authors = ["Michael Aaron Murphy <mmstick@pm.me>"]
description = "GTK desktop settings widget for Pop!_OS"
edition = "2018"
license = "LGPLv3"
readme = "README.md"

[workspace]
members = [ "ffi", "tools" ]

[dependencies]
cascade = "1.0.0"
gdk = "0.13.2"
glib = "0.10.3"
gtk = "0.9.2"
gtk-extras = { git = "https://github.com/pop-os/gtk-extras" }
gio = "0.9.1"
libhandy = "0.7.1"
pop-theme-switcher = { git = "https://github.com/pop-os/theme-switcher" }
