[package]
name = "pop-desktop-widget"
version = "0.1.2"
authors = ["Michael Aaron Murphy <mmstick@pm.me>"]
description = "GTK desktop settings widget for Pop!_OS"
edition = "2018"
license = "LGPLv3"
readme = "README.md"

[workspace]
members = [ "ffi", "tools" ]

[dependencies]
cascade = "1.0.0"
fomat-macros = "0.3.1"
gdk = "0.14"
glib = "0.14"
gtk = "0.14"
gtk-extras = { git = "https://github.com/pop-os/gtk-extras" }
gio = "0.14"
libhandy = "0.8"
pop-theme-switcher = { git = "https://github.com/pop-os/theme-switcher" }
gdk-pixbuf = "0.14"
gstreamer = "0.17"
i18n-embed = { version = "0.13", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.6"
rust-embed = { version = "6.2", features = ["debug-embed"] }
once_cell = "1.8"
