[package]
name = "ffi"
version = "0.1.2"
authors = ["Michael Aaron Murphy <mmstick@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cdylib-link-lines = "0.1"

[lib]
name = "pop_desktop_widget"
crate-type = [ "cdylib" ]

[dependencies]
glib = "0.14"
gtk-sys = "0.14"
gtk = "0.14"
pop-desktop-widget = { path = "../" }
libc = "0.2.97"
